--- a/site/templates/twig/customers/ci/.new/customer/display.twig
+++ b/site/templates/twig/customers/ci/.new/customer/display.twig
@@ -26,7 +26,7 @@
 	</div>
 {% endif %}
 
-<div class="row mb-3">
+<div class="form-row mb-3">
 	<div class="col-sm-2 pl-0">
 		{% include 'customers/ci/.new/customer/toolbar.twig' with {'rid': customer.rid} %}
 	</div>
