--- a/site/templates/twig/customers/ci/.new/customer/header/customer.twig
+++ b/site/templates/twig/customers/ci/.new/customer/header/customer.twig
@@ -47,7 +47,8 @@
 	</div>
 	<div class="list-group-item p-1">
 		<div class="row">
-			<div class="col-sm-4 text-bold">Address</div>
+			<div class="col-sm-1"></div>
+			<div class="col-sm-3 text-bold">Address</div>
 			<div class="col-sm-8">
 				{{ customer.address1 }} <br>
 				{% if (customer.address2 is not empty) %}
