--- a/site/templates/twig/code-tables/mar/tm/form/taxcode.twig
+++ b/site/templates/twig/code-tables/mar/tm/form/taxcode.twig
@@ -17,6 +17,7 @@
 								'data-jqv': 'true',
 								'unique': 'taxcode',
 								'data-index': index,
+								'tabindex': tabindex
 							}
 						},
 						'button': {
