--- a/site/templates/twig/code-tables/mar/tm/form/taxcode.twig
+++ b/site/templates/twig/code-tables/mar/tm/form/taxcode.twig
@@ -28,7 +28,8 @@
 								'data-toggle': 'modal',
 								'data-target': '#ajax-modal',
 								'data-lookupurl': page.searchLookupUrl('mar/mtm/'),
-								'data-input': '#' ~ name
+								'data-input': '#' ~ name,
+								'tabindex': '-1',
 							}
 						}
 					}
