--- a/site/templates/twig/customers/ci/.new/ship-tos/ship-to/header/shipto/codes.twig
+++ b/site/templates/twig/customers/ci/.new/ship-tos/ship-to/header/shipto/codes.twig
@@ -49,7 +49,7 @@
 <div class="list-group-item p-1">
 	<div class="row">
 		<div class="col-sm-4 text-bold">Notes</div>
-		<div class="col-sm-8">// TODO: </div>
+		<div class="col-sm-8">{{ shipto.hasInternalOrOrderNotes()|yesorno|capitalize }}</div>
 	</div>
 </div>
 <div class="list-group-item p-1">
