FIX: disable use route input based off config

--- a/site/templates/twig/code-tables/mar/csv/form/scac-edi-chargefreight.twig
+++ b/site/templates/twig/code-tables/mar/csv/form/scac-edi-chargefreight.twig
@@ -74,7 +74,8 @@
 						'value' : manager.fieldAttribute('useroute', 'default'),
 						'haskeys': true,
 						'showvalue': true,
-						'options': manager.fieldAttribute('useroute', 'options')
+						'options': manager.fieldAttribute('useroute', 'options'),
+						'tabindex': 12,
 					}
 				}
 			%}
