FEAT: disable / enable chargefreight based off config

--- a/site/templates/twig/code-tables/mar/csv/js/classes/Configs.js.twig
+++ b/site/templates/twig/code-tables/mar/csv/js/classes/Configs.js.twig
@@ -29,7 +29,8 @@ class CodeConfigs {
 				default: '{{ manager.fieldAttribute('commercialflight', 'default') }}'
 			},
 			chargefreight: {
-				default: '{{ manager.fieldAttribute('chargefreight', 'default') }}'
+				default: '{{ manager.fieldAttribute('chargefreight', 'default') }}',
+				enabled: {{ manager.fieldAttribute('chargefreight', 'enabled') ? 'true' : 'false' }}
 			},
 			useroute: {
 				default: '{{ manager.fieldAttribute('useroute', 'default') }}',
