--- a/site/templates/twig/customers/ci/.new/purchase-orders/display.twig
+++ b/site/templates/twig/customers/ci/.new/purchase-orders/display.twig
@@ -34,7 +34,7 @@
 		<div class="d-flex justify-content-between align-items-center">
 			<div></div>
 			<div></div>
-			<a href="{{ page.ciUrl(customer.rid) }}" class="btn btn-warning btn-sm">
+			<a href="{{ page.ciUrl(customer.id) }}" class="btn btn-warning btn-sm">
 				<i class="fa fa-times" aria-hidden="true"></i> Close
 			</a>
 		</div>
