--- a/site/templates/twig/customers/ci/.new/contact/display.twig
+++ b/site/templates/twig/customers/ci/.new/contact/display.twig
@@ -5,7 +5,7 @@
 		<div class="d-flex justify-content-between align-items-center">
 			<div></div>
 			<div></div>
-			<a href="{{ page.ciUrl(customer.rid) }}" class="btn btn-primary {{ page.is_print() ? 'd-print-none' : ''}}">
+			<a href="{{ page.ciUrl(customer.id) }}" class="btn btn-primary {{ page.is_print() ? 'd-print-none' : ''}}">
 				<i class="fa fa-undo" aria-hidden="true"></i> {{ customer.id }}
 			</a>
 		</div>
@@ -24,7 +24,7 @@
 		<div class="d-flex justify-content-between align-items-center">
 			<div></div>
 			<div></div>
-			<a href="{{ page.ciUrl(customer.rid) }}" class="btn btn-warning btn-sm">
+			<a href="{{ page.ciUrl(customer.id) }}" class="btn btn-warning btn-sm">
 				<i class="fa fa-times" aria-hidden="true"></i> Close
 			</a>
 		</div>
