--- a/site/templates/twig/warehouse/picking/provalley/scan/select-item-list.twig
+++ b/site/templates/twig/warehouse/picking/provalley/scan/select-item-list.twig
@@ -1,7 +1,7 @@
 {# TODO: HANDLE IF NORMAL ITEM IS IN MULTIPLE BINS #}
 <h4>Select your items</h4>
 <div class="form-group">
-	<a href="{{ page.removeScanUrl() }}" class="btn btn-warning">Retry Search</a>
+	<a href="{{ page.removeScanUrl() }}" class="btn btn-warning reload-link">Retry Search</a>
 </div>
 <div class="list-group">
 	<div class="list-group-item">
