--- a/site/templates/twig/warehouse/picking/unguided/scan/scanned/add-single-form.twig
+++ b/site/templates/twig/warehouse/picking/unguided/scan/scanned/add-single-form.twig
@@ -53,6 +53,6 @@
 		<button type="submit" class="btn btn-success">
 			<i class="fa fa-plus" aria-hidden="true"></i> Add
 		</button>
-		<a href="{{ page.removeScanUrl() }}" class="btn btn-warning">Retry Search</a>
+		<a href="{{ page.removeScanUrl() }}" class="btn btn-warning reload-link">Retry Search</a>
 	</div>
 </form>
