--- a/site/templates/twig/warehouse/picking/unguided/scan/scanned/select-multiple-list.twig
+++ b/site/templates/twig/warehouse/picking/unguided/scan/scanned/select-multiple-list.twig
@@ -12,7 +12,7 @@
 	</div>
 	<div class="col">
 		<div class="form-group">
-			<a href="{{ page.removeScanUrl() }}" class="btn btn-warning">Retry Search</a>
+			<a href="{{ page.removeScanUrl() }}" class="btn btn-warning reload-link">Retry Search</a>
 		</div>
 	</div>
 </div>
